test/scc/expr/semantic-errors/153.a
153.t:3:17: error: initializer-string is too long